--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "style-loader": "^0.13.1"
   },
   "dependencies": {
-    "@tilastokeskus/react-object-inspector": "^0.2.3",
+    "react-object-inspector": "^0.2.1",
     "debounce": "^1.0.0",
     "react-fontawesome": "^1.1.0",
     "react-helmet": "^5.2.0",
