--- a/package.json
+++ b/package.json
@@ -34,14 +34,16 @@
     "git-url-parse": "^6.0.1",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "style-loader": "^0.13.1"
   },
   "dependencies": {
-    "react-object-inspector": "^0.2.1",
     "debounce": "^1.0.0",
     "react-fontawesome": "^1.1.0",
     "react-helmet": "^5.2.0",
-    "react-highlight": "^0.10.0"
+    "react-highlight": "https://github.com/lbogdan/react-highlight#master",
+    "react-object-inspector": "^0.2.1"
   },
   "peerDependencies": {
     "react": "^16.0.0",
